@@ -1,14 +1,13 @@
 package com.undercontroll.domain.usecase.dashboard.impl;
 
+import com.undercontroll.domain.usecase.dashboard.DashboardDateFilter;
 import com.undercontroll.domain.usecase.dashboard.GetProfitMarginPort;
-import com.undercontroll.domain.enums.PeriodFilter;
 import com.undercontroll.domain.gateway.OrderGateway;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,30 +18,13 @@ public class GetProfitMarginImpl implements GetProfitMarginPort {
     @Override
     @Cacheable(value = "dashboardMetrics", key = "#input.period().toString() + '-' + #input.status().toString() + '-profitMargin'")
     public Output execute(Input input) {
-        LocalDate startDate = calculateStartDate(input.period());
-        var statuses = input.status().getStatuses();
-
-        var statusStrings = statuses.stream()
-                .map(Enum::name)
-                .collect(Collectors.toList());
+        LocalDate startDate = DashboardDateFilter.from(input.period());
+        var statuses = input.status().getStatuses().stream().map(Enum::name).toList();
 
         Double totalRevenue = orderGateway.calculateTotalRevenueFiltered(startDate, statuses);
-        Double totalPartsCost = orderGateway.calculateTotalPartsCostFiltered(startDate, statusStrings);
+        Double totalPartsCost = orderGateway.calculateTotalPartsCostFiltered(startDate, statuses);
         Double profitMargin = totalRevenue - totalPartsCost;
 
         return new Output(profitMargin);
-    }
-
-    private LocalDate calculateStartDate(PeriodFilter period) {
-        if (period == null) return null;
-        
-        String periodStr = period.toString();
-        return switch (periodStr) {
-            case "LAST_7_DAYS" -> LocalDate.now().minusDays(7);
-            case "LAST_30_DAYS" -> LocalDate.now().minusDays(30);
-            case "LAST_90_DAYS" -> LocalDate.now().minusDays(90);
-            case "ALL_TIME" -> null;
-            default -> null;
-        };
     }
 }
